# networking-opencontrail

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  lower-constraints.txt  requirements.txt  run_tests.sh  setup.cfg  tempest-blacklist.txt  test-requirements.txt  tox.ini
devstack/: README.rst  plugin.sh  settings
doc/source/: architecture.rst  conf.py  contributing.rst  flavors.rst  index.rst  installation.rst  troubleshooting.rst  usage.rst
etc/: ml2_conf_opencontrail.ini
networking-opencontrail/tests/: test_networking-opencontrail.py
networking_opencontrail/agents/: dhcp_scheduler.py
networking_opencontrail/bgpvpn/: api_bridge.py  bgpvpn.py  driver.py
networking_opencontrail/common/: constants.py  exceptions.py  utils.py
networking_opencontrail/drivers/: __init__.py  contrail_driver_base.py  drv_opencontrail.py  rest_driver.py
networking_opencontrail/l3/: l3_flavor.py  opencontrail_rt_callback.py  snat_synchronizer.py  tungstenfabric_api.py
networking_opencontrail/ml2/: mech_driver.py  (+4 more)
playbooks/: ansible.cfg  change_password.yml  compute_local.conf.j2  contrail.yml  contrail_deployer.yml  controller_local.conf.j2  deploy_driver.yml  devstack_deployer.yml  env.yml  fix_docker_bip.yml  hosts  instances.yaml.j2  main.yml  mymain.yml  openstack.yml  prepare.yml  setup_nodes.yml  synchronize.yml  tests.yml
tools/: contrail_deploy.sh  contrail_prepare.sh  run_tests.sh
zuul-playbooks/: contrail-nightly.yml  hosts.j2  instances.yaml.j2  post.yaml  pre.yaml  run.yaml
(+123 files in other folders)
